--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,9 +77,10 @@ bind -T copy-mode-vi WheelDownPane send -N 1 -X scroll-down
 # This is required for vim colors to work correctly when ssh-ing to one server,
 # running tmux on it, and then in one pane ssh-ing to a different server. If
 # this is not set, that latter pane will not have proper colors in vim.
+set -g allow-passthrough on
+set -as terminal-features 'xterm-kitty:passthrough'
 set -g default-terminal "xterm-kitty"
 set -ga terminal-overrides ",xterm-kitty:Tc"
-set -gq allow-passthrough all
 
 # Apparently helps with nvim compatibility; not sure why this is needed
 set -g focus-events on
