--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1343,7 +1343,7 @@ background            #2e3440
 #: interactive mode and reads its startup rc files. Environment
 #: variables are expanded in this setting.
 
-# editor .
+editor /opt/homebrew/bin/nvim
 
 #: The terminal based text editor (such as vim or nano) to use when
 #: editing the kitty config file or similar tasks.
