chore(tmux): add tmux-open and tmux-copycat plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,7 +24,8 @@ set -g @plugin 'tmux-plugins/tmux-yank' # Copy to the system clipboard in tmux.
 set -g @plugin 'akohlbecker/aw-watcher-tmux'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
