--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,6 +11,7 @@ map cmd+v paste_from_clipboard
 # for fish accept-autosuggestion execute
 map ctrl+enter send_text all "\x1b[13;5u"
 map cmd+w noop
+map cmd+t noop
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
