feat(tmux): add F1/F2 keybindings for window management

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,6 +66,7 @@ set-option -g status-position top
 set-option -g renumber-windows on
 set -g base-index 1
 
+
 set-option -g default-shell /usr/local/bin/fish
 set-option -g set-clipboard on
 set -g mouse on
@@ -100,6 +101,10 @@ set -g status-interval 5
 
 # Use vim keybindings for navigating copy mode
 setw -g mode-keys vi
+
+# Bind F1/F2 (sent from kitty) to new/kill window
+bind-key -n F1 new-window -c "#{pane_current_path}"
+bind-key -n F2 kill-window
 
 # TPM
 run '~/.tmux/plugins/tpm/tpm'
