--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,8 +10,9 @@ map cmd+v paste_from_clipboard
 
 # for fish accept-autosuggestion execute
 map ctrl+enter send_text all "\x1b[13;5u"
-map cmd+w noop
-map cmd+t noop
+# Map Cmd+T and Cmd+W to F1 and F2 to be caught by tmux
+map cmd+t send_key f1
+map cmd+w send_key f2
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
