feat(tmux): add keybindings for window splitting, copycat, and config reload

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -105,6 +105,12 @@ setw -g mode-keys vi
 # Bind F1/F2 (sent from kitty) to new/kill window
 bind-key -n F1 new-window -c "#{pane_current_path}"
 bind-key -n F2 kill-window
+bind-key -n F3 split-window -h -c "#{pane_current_path}"
+
+bind-key -n F4 run-shell "~/.tmux/plugins/tmux-copycat/scripts/copycat_search.sh"
+bind-key -n F5 run-shell "~/.tmux/plugins/tmux-copycat/scripts/copycat_mode_start.sh '(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~ @!#$&()*+-]*'"
+
+bind-key -n F6 source-file ~/.tmux.conf ; display-message "Config reloaded!"
 
 # TPM
 run '~/.tmux/plugins/tpm/tpm'
