--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -13,6 +13,10 @@ map ctrl+enter send_text all "\x1b[13;5u"
 # Map Cmd+T and Cmd+W to F1 and F2 to be caught by tmux
 map cmd+t send_key f1
 map cmd+w send_key f2
+map cmd+enter send_key f3
+map cmd+f send_key f4
+map cmd+r send_key f6
+map cmd+u send_key f5
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
