refactor(kitty): Consolidate and update keybindings

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,13 +10,25 @@ map cmd+v paste_from_clipboard
 
 # for fish accept-autosuggestion execute
 map ctrl+enter send_text all "\x1b[13;5u"
-# Map Cmd+T and Cmd+W to F1 and F2 to be caught by tmux
+
+# Map to be caught by tmux
 map cmd+t send_key f1
-map cmd+w send_key f2
-map cmd+enter send_key f3
-map cmd+f send_key f4
+map cmd+q send_key f2
+map cmd+a send_key f3
+map cmd+enter send_key f4
+map cmd+z send_key f5
+
+# reload config
 map cmd+r send_key f6
-map cmd+u send_key f5
+
+# prev/next window
+map cmd+j send_key f9
+map cmd+k send_key f10
+
+# copycat
+map cmd+f send_key f11
+map cmd+u send_key f12
+
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
