feat(tmux): Update tmux keybindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -102,15 +102,20 @@ set -g status-interval 5
 # Use vim keybindings for navigating copy mode
 setw -g mode-keys vi
 
-# Bind F1/F2 (sent from kitty) to new/kill window
+# Bind F1..F12 (sent from kitty)
 bind-key -n F1 new-window -c "#{pane_current_path}"
-bind-key -n F2 kill-window
-bind-key -n F3 split-window -h -c "#{pane_current_path}"
-
-bind-key -n F4 run-shell "~/.tmux/plugins/tmux-copycat/scripts/copycat_search.sh"
-bind-key -n F5 run-shell "~/.tmux/plugins/tmux-copycat/scripts/copycat_mode_start.sh '(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~ @!#$&()*+-]*'"
+bind-key -n F2 kill-pane
+bind-key -n F3 kill-window
+bind-key -n F4 split-window -h -c "#{pane_current_path}"
+bind-key -n F5 resize-pane -Z
 
 bind-key -n F6 source-file ~/.tmux.conf ; display-message "Config reloaded!"
+
+bind-key -n F9 previous-window
+bind-key -n F10 next-window
+
+bind-key -n F11 run-shell "~/.tmux/plugins/tmux-copycat/scripts/copycat_search.sh"
+bind-key -n F12 run-shell "~/.tmux/plugins/tmux-copycat/scripts/copycat_mode_start.sh '(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~ @!#$&()*+-]*'"
 
 # TPM
 run '~/.tmux/plugins/tpm/tpm'
