feat(nvim): integrate which-key for git plugins and refactor keymaps

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,6 +11,8 @@ map cmd+v paste_from_clipboard
 # for fish accept-autosuggestion execute
 map ctrl+enter send_text all "\x1b[13;5u"
 
+map cmd+w noop
+
 # Map to be caught by tmux
 map cmd+t send_key f1
 map cmd+q send_key f2
@@ -42,24 +44,18 @@ map cmd+u send_key f12
 # font_family     ShureTechMono Nerd Font
 #
 
-# Основной шрифт (моноширинный)
-font_family        ShureTechMono Nerd Font Mono
+# Base font (monospace)
+font_family ShureTechMono Nerd Font Mono
 
-# Жирный текст
+# Cyrillic fallback (monospace)
+symbol_map U+0400-U+04FF JetBrainsMono Nerd Font Mono
+
+# Nerd Font Symbols (PUA block)
+symbol_map U+E000-U+F8FF JetBrainsMono Nerd Font Mono
+
 # bold_font          ShureTechMono Nerd Font Mono
-# Курсив
 # italic_font        Monoid Italic
-# Жирный курсив
 # bold_italic_font    ShureTechMono Nerd Font Mono
-
-# Cyrillic
-# symbol_map U+0400-U+04FF SF Mono
-symbol_map U+0400-U+04FF JetBrainsMono Nerd Font
-
-#
-# Nerd Font Icons
-symbol_map U+E000-U+F8FF JetBrainsMono Nerd Font
-
 # bold_font        Share Tech Mono
 # symbol_map U+0066 Share Tech Mono
 # italic_font      auto
