--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -31,7 +31,6 @@ map cmd+k send_key f10
 map cmd+f send_key f11
 map cmd+u send_key f12
 
-
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
@@ -46,6 +45,9 @@ map cmd+u send_key f12
 
 # Base font (monospace)
 font_family ShureTechMono Nerd Font Mono
+bold_font auto
+italic_font auto
+bold_italic_font auto
 
 # Cyrillic fallback (monospace)
 symbol_map U+0400-U+04FF JetBrainsMono Nerd Font Mono
