chore(kitty): Add Russian keyboard shortcuts for Kitty commands.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,34 +2,57 @@ include ./nord.conf
 
 allow_remote_control yes
 
+# ==== Font size ====
 map cmd+equal change_font_size all +2.0
+map cmd+plus  change_font_size all +2.0   # русская раскладка (= на +)
 map cmd+minus change_font_size all -2.0
 map cmd+0 change_font_size all 0
-map cmd+c copy_to_clipboard
-map cmd+v paste_from_clipboard
 
-# for fish accept-autosuggestion execute
+# ==== Clipboard ====
+map cmd+c copy_to_clipboard
+map cmd+с copy_to_clipboard    # русская "с"
+
+map cmd+v paste_from_clipboard
+map cmd+м paste_from_clipboard # русская "м"
+
+# ==== Special ====
 map ctrl+enter send_text all "\x1b[13;5u"
 
 map cmd+w noop
+map cmd+ц noop   # русская "ц"
 
-# Map to be caught by tmux
+# ==== tmux passthrough ====
 map cmd+t send_key f1
+map cmd+е send_key f1     # русская "е"
+
 map cmd+q send_key f2
+map cmd+й send_key f2     # русская "й"
+
 map cmd+a send_key f3
+map cmd+ф send_key f3     # русская "ф"
+
 map cmd+enter send_key f4
+
 map cmd+z send_key f5
+map cmd+я send_key f5     # русская "я"
 
-# reload config
+# ==== reload ====
 map cmd+r send_key f6
+map cmd+к send_key f6     # русская "к"
 
-# prev/next window
+# ==== prev/next window ====
 map cmd+j send_key f9
-map cmd+k send_key f10
+map cmd+о send_key f9     # русская "о"
 
-# copycat
+map cmd+k send_key f10
+map cmd+л send_key f10    # русская "л"
+
+# ==== copycat ====
 map cmd+f send_key f11
+map cmd+а send_key f11    # русская "а"
+
 map cmd+u send_key f12
+map cmd+г send_key f12    # русская "г"
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
