feat(kitty): enable unsafe paste and enhance clipboard handling

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,7 @@
 include ./nord.conf
 
 allow_remote_control yes
+allow_unsafe_paste yes
 
 # ==== Font size ====
 map cmd+equal change_font_size all +2.0
@@ -10,10 +11,10 @@ map cmd+0 change_font_size all 0
 
 # ==== Clipboard ====
 map cmd+c copy_to_clipboard
-map cmd+с copy_to_clipboard    # русская "с"
+map cmd+с copy_to_clipboard
 
 map cmd+v paste_from_clipboard
-map cmd+м paste_from_clipboard # русская "м"
+map cmd+м paste_from_clipboard
 
 # ==== Special ====
 map ctrl+enter send_text all "\x1b[13;5u"
