chore(mpv): configure yt-dlp for video downloads

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -65,7 +65,7 @@ sub-color="#FFFFFF"
 title="${filename}"
 
 # Disable ytdl hook if you use external tools for streaming
-ytdl=no
+# ytdl=no
 
 # Screenshot format and location
 screenshot-format=png
@@ -74,4 +74,6 @@ screenshot-directory=~/Documents/screenshots/mpv
 # Enable direct rendering for performance
 vd-lavc-fast=yes
 
-
+ytdl=yes
+ytdl-format=bestvideo+bestaudio/best
+script-opts=ytdl_hook-ytdl_path=yt-dlp
