chore: Add gitignore entries for codex logs, sessions, and history

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ zed/conversations
 zed/prompts
 .context
 repomix-output.xml
+codex/auth.json
+codex/log
+codex/sessions
+codex/history.jsonl
+codex/version.jsonl
