--- a/codex/config.toml
+++ b/codex/config.toml
@@ -1,1 +1,2 @@
-projects = { "/Users/tim/dev/work/mobile" = { trust_level = "trusted" } }
+[projects."/Users/tim/dev/dotfiles"]
+trust_level = "trusted"
