--- a/.gitconfig
+++ b/.gitconfig
@@ -12,8 +12,8 @@
 	defaultBranch = master
 
 [core]
-	pager = delta
-	autocrlf = input
+    pager = delta
+    autocrlf = input
 
 [interactive]
 	diffFilter = delta --color-only
@@ -31,6 +31,7 @@
 
 [merge]
 	conflictstyle = diff3
+	tool = nvimdiff
 
 [diff]
 	colorMoved = default
@@ -49,3 +50,21 @@
 [difftool "nvimdiff"]
 	# Separate minimal profile
 	cmd = env NVIM_APPNAME=nvim-diff nvim -d "$LOCAL" "$REMOTE"
+
+[mergetool]
+	prompt = false
+	keepBackup = false
+
+[mergetool "nvimdiff"]
+	# 4-pane merge: LOCAL | BASE | REMOTE with MERGED at bottom
+	cmd = env NVIM_APPNAME=nvim-diff nvim -d "$LOCAL" "$BASE" "$REMOTE" "$MERGED" -c 'wincmd J' -c 'wincmd ='
+
+[alias]
+    # Side-by-side diffs using git-split-diffs
+    sdiff = !sh -c 'git diff --no-ext-diff --color=always "$@" | git-split-diffs --color | less -RFX' -
+    # Log with patches rendered side-by-side
+    slog = !sh -c 'git log -p --color=always "$@" | git-split-diffs --color | less -RFX' -
+
+[split-diffs]
+    # Allow split view on narrower panes (e.g. LazyGit panel widths)
+	min-line-width = 0
