--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -5,3 +5,22 @@ customCommands:
     description: "Generate commit message with LazyCommit"
     loadingText: "AI is generating a commit message..."
     output: terminal
+  - key: "S"
+    context: "files"
+    description: "Split diff (current file)"
+    loadingText: "Rendering split diff..."
+    output: panel
+    command: |
+      bash -lc 'git diff --no-ext-diff --color=always -- "{{.SelectedFile.Name}}" | git-split-diffs --color'
+  - key: "S"
+    context: "commits"
+    description: "Split diff (selected commit)"
+    loadingText: "Rendering split diff..."
+    output: panel
+    command: |
+      bash -lc 'git show --no-ext-diff --color=always {{.SelectedCommit.Sha}} | git-split-diffs --color'
+
+git:
+  paging:
+    colorArg: always
+    pager: git-split-diffs --color
