pre-commit: exclude fish/fish_variables from detect-secrets to avoid false positives, keep scanning configs

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     hooks:
       - id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
-        exclude: '.*lock\.json$'
+        exclude: '(^fish/fish_variables$|.*lock\.json$)'
 
   # General security checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
