--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,17 @@ repos:
       - id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
         exclude: '(^fish/fish_variables$|.*lock\.json$)'
+      # Secondary targeted scan for fish/fish_variables without entropy detectors
+      - id: detect-secrets
+        name: detect-secrets (fish variables, no entropy)
+        entry: detect-secrets scan --no-follow-symlinks --all-files \
+          --disable-plugin Base64HighEntropyString \
+          --disable-plugin HexHighEntropyString \
+          --fail-on-secrets fish/fish_variables
+        language_version: python3
+        pass_filenames: false
+        files: '^fish/fish_variables$'
+        stages: [pre-commit]
 
   # General security checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
