dark-mode: split toggles and make reliable
- Add userscripts/toggle-darkreader: toggles engine-level user stylesheet (CSP-proof)
- Add styles/darkfilter.css and bind Space u m to toggle it (temporary)
- Keep built-in Qt dark mode on Space u n
- Fix quoting and avoid long FIFO base64 payloads
- Add Cmd+, to open qute://settings
- Remove file:// @require to prevent unwanted downloads

Note: Dark Reader library is not used now due to CSP; toggle uses user stylesheet for reliability.

--- a/codex/config.toml
+++ b/codex/config.toml
@@ -32,6 +32,17 @@ ENDPOINT = "https://auto.sqvr.net/api/graphql/v1"
 command = "npx"
 args = ["-y", "task-master-ai"]
 
+[mcp_servers.serena]
+command = "uvx"
+args = [
+  "--from",
+  "git+https://github.com/oraios/serena",
+  "serena",
+  "start-mcp-server",
+  "--context",
+  "codex",
+]
+
 [mcp_servers.repomix]
 command = "npx"
 args = ["-y", "repomix", "--mcp"]
