tmux: Cmd+R (F6) now prompts to rename window instead of reloading config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,7 +109,7 @@ bind-key -n F3 kill-window
 bind-key -n F4 split-window -h -c "#{pane_current_path}"
 bind-key -n F5 resize-pane -Z
 
-bind-key -n F6 source-file ~/.tmux.conf ; display-message "Config reloaded!"
+bind-key -n F6 command-prompt -I '#W' 'rename-window -- "%%"'
 
 bind-key -n F9 previous-window
 bind-key -n F10 next-window
