--- a/.gitconfig
+++ b/.gitconfig
@@ -60,10 +60,10 @@
 	cmd = env NVIM_APPNAME=nvim-diff nvim -d "$LOCAL" "$BASE" "$REMOTE" "$MERGED" -c 'wincmd J' -c 'wincmd ='
 
 [alias]
-    # Side-by-side diffs using git-split-diffs (force truecolor)
     sdiff = !sh -c 'git diff --no-ext-diff --color=always "$@" | git-split-diffs --color=16m | less -RFX' -
-    # Log with patches rendered side-by-side (force truecolor)
-    slog = !sh -c 'git log -p --color=always "$@" | git-split-diffs --color=16m | less -RFX' -
+    slog  = !sh -c 'git log -p --color=always "$@" | git-split-diffs --color=16m | less -RFX' -
+    vdiff = !sh -c 'git diff --no-ext-diff --color=always "$@" | diff-so-fancy | less -RFX' -
+    vlog  = !sh -c 'git log -p --color=always "$@" | diff-so-fancy | less -RFX' -
 
 [split-diffs]
     # Allow split view on narrower panes (e.g. LazyGit panel widths)
