--- a/glance/glance.yml
+++ b/glance/glance.yml
@@ -205,6 +205,7 @@ pages:
               - openai/codex
               - charmbracelet/crush
               - eyaltoledano/claude-task-master
+              - Haleclipse/CCometixLine
 
           - type: markets
             markets:
