chore(glance): update list of repositories

--- a/glance/glance.yml
+++ b/glance/glance.yml
@@ -203,6 +203,7 @@ pages:
               - yarlson/lnk
               - eyaltoledano/claude-task-master
               - Haleclipse/CCometixLine
+              - Piebald-AI/tweakcc
 
           - type: markets
             markets:
