--- a/.tmux.conf
+++ b/.tmux.conf
@@ -140,6 +140,7 @@ set -g status-right ''
 
 # Override plugin bindings - must be after TPM
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-no-clear
+bind-key -T copy-mode-vi MouseDown1Pane send-keys -X clear-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi Enter send-keys -X copy-selection
 
@@ -157,6 +158,7 @@ bind-key -T copy-mode-vi a send-keys -X cancel
 bind-key -T copy-mode-vi ф send-keys -X cancel
 
 bind-key -T copy-mode-vi p send-keys -X cancel \; paste-buffer
+bind-key -T copy-mode-vi з send-keys -X cancel \; paste-buffer
 bind-key -T copy-mode-vi C-v send-keys -X cancel \; paste-buffer
 
 # Selection highlighting color (Nord theme)
