tmux: add pane move/pull prompts at 50% split
- Prefix m: move current pane to chosen window (50% horizontal)
- Prefix M: pull active pane from chosen window (50% vertical)
- Fix commit hooks: remove unsupported --no-follow-symlinks in detect-secrets sub-hook
- EOF fix applied by hook in qutebrowser/userscripts/claude-export

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
       # Secondary targeted scan for fish/fish_variables without entropy detectors
       - id: detect-secrets
         name: detect-secrets (fish variables, no entropy)
-        entry: detect-secrets scan --no-follow-symlinks --all-files \
+        entry: detect-secrets scan --all-files \
           --disable-plugin Base64HighEntropyString \
           --disable-plugin HexHighEntropyString \
           --fail-on-secrets fish/fish_variables
