--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,9 +72,6 @@ set-option -g set-clipboard on
 set -g mouse on
 setw -g aggressive-resize on
 set -g @scroll-speed-num-lines-per-scroll "1"
-bind -T copy-mode-vi WheelUpPane send -N 1 -X scroll-up
-bind -T copy-mode-vi WheelDownPane send -N 1 -X scroll-down
-
 
 # This is required for vim colors to work correctly when ssh-ing to one server,
 # running tmux on it, and then in one pane ssh-ing to a different server. If
@@ -99,17 +96,14 @@ set -g display-time 4000
 # update status every this many seconds
 set -g status-interval 5
 
-# Use vim keybindings for navigating copy mode
-setw -g mode-keys vi
+# Move current pane into a chosen window (vertical 50%)
+# Prompts for destination window number and splits it evenly.
+unbind m
+bind m command-prompt -p "Move to:" "join-pane -h -l 50% -t ':%1'"
 
-# Copy mode bindings - stay in copy mode after selection
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-no-clear
-bind-key -T copy-mode-vi Enter send-keys -X copy-selection-no-clear
-# Mouse selection stays in copy mode
-unbind-key -T copy-mode-vi MouseDragEnd1Pane
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-no-clear
-bind-key -T copy-mode-vi MouseDown1Pane select-pane
+# Pull a pane from another window into current one (vertical 50%)
+unbind M
+bind M command-prompt -p "Pull from:" "join-pane -h -l 50% -s ':%1' -t :."
 
 # Bind F1..F12 (sent from kitty)
 bind-key -n F1 new-window -c "#{pane_current_path}"
@@ -137,6 +131,20 @@ unbind _
 
 # keep this line after run '~/.tmux/plugins/tpm/tpm'
 set -g status-right ''
+
+# Use vim keybindings for navigating copy mode
+setw -g mode-keys vi
+
+bind -T copy-mode-vi WheelUpPane send -N 1 -X scroll-up
+bind -T copy-mode-vi WheelDownPane send -N 1 -X scroll-down
+
+# Copy mode bindings - stay in copy mode after selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-no-clear
+bind-key -T copy-mode-vi Enter send-keys -X copy-selection-no-clear
+
+# Mouse selection stays in copy mode
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
 
 # Override plugin bindings - must be after TPM
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-no-clear
