tmux: rebind window move ops to v/b
- Prefix v: insert current window before chosen index (shift others)
- Prefix b: swap current window with chosen index
- Remove prior I/W binds to avoid conflicts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,6 +96,16 @@ set -g display-time 4000
 # update status every this many seconds
 set -g status-interval 5
 
+# Move current window to specific index, even if occupied
+# - Prefix + v → Insert before index (shift others)
+# - Prefix + b → Swap with index (exchange positions)
+unbind I
+unbind W
+unbind v
+unbind b
+bind v command-prompt -p "Insert before index:" "move-window -b -t ':%1'"
+bind b command-prompt -p "Swap with index:" "swap-window -t ':%1'"
+
 # Move current pane into a chosen window (vertical 50%)
 # Prompts for destination window number and splits it evenly.
 unbind m
