tmux: align comments/format for window/pane move bindings
- Normalize headings and bullets
- Clarify 50% horizontal split for m/M
- Keep prompts as Insert/Swap/Move/Pull for consistency

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,22 +96,23 @@ set -g display-time 4000
 # update status every this many seconds
 set -g status-interval 5
 
-# Move current window to specific index, even if occupied
+# Move current window to specific index
 # - Prefix + v → Insert before index (shift others)
-# - Prefix + b → Swap with index (exchange positions)
-unbind I
-unbind W
 unbind v
-unbind b
-bind v command-prompt -p "Insert before index:" "move-window -b -t ':%1'"
-bind b command-prompt -p "Swap with index:" "swap-window -t ':%1'"
+bind v command-prompt -p "Insert before:" "move-window -b -t ':%1'"
 
-# Move current pane into a chosen window (vertical 50%)
-# Prompts for destination window number and splits it evenly.
+# Move current window to specific index
+# - Prefix + b → Swap with index (exchange positions)
+unbind b
+bind b command-prompt -p "Swap with:" "swap-window -t ':%1'"
+
+# Move current pane to chosen window
+# - Prefix + m → Move to index (split 50/50)
 unbind m
 bind m command-prompt -p "Move to:" "join-pane -h -l 50% -t ':%1'"
 
-# Pull a pane from another window into current one (vertical 50%)
+# Pull pane from another window into current one
+# - Prefix + M → Pull from index (split 50/50)
 unbind M
 bind M command-prompt -p "Pull from:" "join-pane -h -l 50% -s ':%1' -t :."
 
