fix(tmux): improve copy-mode mouse behavior

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -159,7 +159,15 @@ unbind-key -T copy-mode-vi MouseDragEnd1Pane
 
 # Override plugin bindings - must be after TPM
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-no-clear
-bind-key -T copy-mode-vi MouseDown1Pane send-keys -X clear-selection
+
+# Click to focus pane even when current pane is in copy-mode
+# Also clear any pending selection on click
+bind-key -T copy-mode-vi MouseDown1Pane select-pane -t= \; send-keys -X clear-selection
+
+# Ensure single click focuses other pane,
+# but passes the click to the app if clicking the already-active pane
+bind -n MouseDown1Pane if-shell -F '#{==:#{pane_id},#{mouse_pane}}' 'send-keys -M' 'select-pane -t= \; send-keys -M'
+
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi Enter send-keys -X copy-selection
 
