fix(tmux): ensure mouse click focuses panes in normal mode
Explicitly binds MouseUp1Pane in the root table to select the pane and pass the mouse event through to the application.

This restores focus-on-click behavior for TUI applications like Neovim,
which was lost due to extensive custom mouse bindings, without
affecting the existing special behavior in copy-mode.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,7 @@ bind-key C-a send-prefix
 # Ctrl-a r to reload this config
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+bind к source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 set -g automatic-rename            on
 set -g automatic-rename-format     '#{pane_current_command} /#{b:pane_current_path}'
@@ -70,6 +71,13 @@ set -g base-index 1
 set-option -g default-shell /usr/local/bin/fish
 set-option -g set-clipboard on
 set -g mouse on
+
+# Handle mouse clicks in normal mode:
+# Trigger on MouseUp to ensure correct pane evaluation.
+# - If pane is already active, pass the click directly to the application (e.g., for Neovim cursor positioning).
+# - If pane is not active, select it and then pass the click.
+bind-key -n MouseUp1Pane if-shell -F '#{==:#{pane_id},#{mouse_pane}}' 'send-keys -M' 'select-pane -t= ; send-keys -M'
+
 setw -g aggressive-resize on
 set -g @scroll-speed-num-lines-per-scroll "1"
 
@@ -161,12 +169,25 @@ unbind-key -T copy-mode-vi MouseDragEnd1Pane
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-no-clear
 
 # Click to focus pane even when current pane is in copy-mode
-# Also clear any pending selection on click
-bind-key -T copy-mode-vi MouseDown1Pane select-pane -t= \; send-keys -X clear-selection
+# Also clear any pending selection on click when target pane is in copy mode
+unbind-key -T copy-mode-vi MouseDown1Pane
+bind-key -T copy-mode-vi MouseDown1Pane select-pane -t= \; if-shell -F "#{pane_in_mode}" "send-keys -X clear-selection"
 
-# Ensure single click focuses other pane,
-# but passes the click to the app if clicking the already-active pane
-bind -n MouseDown1Pane if-shell -F '#{==:#{pane_id},#{mouse_pane}}' 'send-keys -M' 'select-pane -t= \; send-keys -M'
+# Allow clicking on status line tabs to switch windows while in copy mode
+bind-key -T copy-mode-vi MouseDown1Status select-window -t=
+bind-key -T copy-mode-vi MouseDown3Status select-window -t=
+
+# Ensure clicks on status line switch windows outside copy mode as well
+unbind-key -n MouseDown1Status
+unbind-key -n MouseDown3Status
+unbind-key -n MouseUp1Status
+unbind-key -n MouseUp3Status
+unbind-key -n MouseDrag1Status
+bind-key -n MouseDown1Status select-window -t=
+bind-key -n MouseDown3Status select-window -t=
+bind-key -n MouseUp1Status select-window -t=
+bind-key -n MouseUp3Status select-window -t=
+bind-key -n MouseDrag1Status select-window -t=
 
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi Enter send-keys -X copy-selection
