chore(kitty): clean up Russian keyboard mapping comments
Remove verbose comments from Russian keyboard layout mappings
to improve config readability.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,36 +24,36 @@ map cmd+ц noop   # русская "ц"
 
 # ==== tmux passthrough ====
 map cmd+t send_key f1
-map cmd+е send_key f1     # русская "е"
+map cmd+е send_key f1
 
 map cmd+q send_key f2
-map cmd+й send_key f2     # русская "й"
+map cmd+й send_key f2
 
 map cmd+a send_key f3
-map cmd+ф send_key f3     # русская "ф"
+map cmd+ф send_key f3
 
 map cmd+enter send_key f4
 
 map cmd+z send_key f5
-map cmd+я send_key f5     # русская "я"
+map cmd+я send_key f5
 
 # ==== reload ====
 map cmd+r send_key f6
-map cmd+к send_key f6     # русская "к"
+map cmd+к send_key f6
 
 # ==== prev/next window ====
 map cmd+j send_key f9
-map cmd+о send_key f9     # русская "о"
+map cmd+о send_key f9
 
 map cmd+k send_key f10
-map cmd+л send_key f10    # русская "л"
+map cmd+л send_key f10
 
 # ==== copycat ====
 map cmd+f send_key f11
-map cmd+а send_key f11    # русская "а"
+map cmd+а send_key f11
 
 map cmd+u send_key f12
-map cmd+г send_key f12    # русская "г"
+map cmd+г send_key f12
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
