chore: apply personal configuration updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,7 +68,8 @@ set-option -g renumber-windows on
 set -g base-index 1
 
 
-set-option -g default-shell /usr/local/bin/fish
+set-environment -g TMPDIR "$HOME/tmp"
+set-option -g default-shell /opt/homebrew/bin/fish
 set-option -g set-clipboard on
 set -g mouse on
 
